--- a/client/src/components/products/styles/SingleProductPage.css
+++ b/client/src/components/products/styles/SingleProductPage.css
@@ -1,3 +1,34 @@
+/* main container */
+
 .single-product-contianer{
   max-width: 65%;
+  margin: 50px auto 0;
+  display: flex;
+  
+}
+
+.single-product-contianer img{
+  height: 550px;
+}
+
+/* interactive container */
+
+.interactive-container{
+  margin: 0 auto;
+}
+
+.interactive-container .sizes{
+  padding: 10px;
+  background-color: rgba(247, 247, 247, 0.829);
+  margin: 0 5px;
+  color: rgb(250, 139, 12);
+  border-radius: 5px;
+  font-weight: bold;
+  border: 1px solid black;
+}
+
+.interactive-container .colors{
+  color: dodgerblue;
+  margin: 0 5px;
+  text-transform: uppercase;
 }
