--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -95,7 +95,8 @@ body {
 
 .form input[type="text"],
 .form input[type="email"],
-.form input[type="password"] {
+.form input[type="password"],
+.form input[type="number"] {
   width: 100%;
   border: 1px solid #aaa7a7;
   background-color: #e9e9e9;
